--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     ]
   },
   "devDependencies": {
+    "axios": "^0.26.1",
     "react-redux": "^8.0.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1"
