--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.73.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,7 +37,9 @@
     ]
   },
   "devDependencies": {
+    "antd": "^4.22.8",
     "axios": "^0.26.1",
+    "loadsh": "^0.0.4",
     "react-redux": "^8.0.0",
     "react-router-dom": "^6.3.0",
     "redux": "^4.2.0",
