--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
     "ahooks": "^3.7.1",
     "antd": "^4.22.8",
     "axios": "^0.26.1",
+    "bpmn-js": "6.0.4",
+    "bpmn-js-properties-panel": "0.33.0",
+    "camunda-bpmn-moddle": "4.3.0",
     "loadsh": "^0.0.4",
     "react-redux": "^8.0.0",
     "react-router-dom": "^6.3.0",
